--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "karma-phantomjs-launcher": "^0.1.4"
   },
   "dependencies": {
-    "lodash": "^3.3.1"
+    "lodash": "^3.3.1",
+    "pegjs": "^0.8.0"
   }
 }
