--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "data-monster",
   "scripts": {
-    "test": "./node_modules/karma/bin/karma start --reporters nyan"
+    "test": "./node_modules/jasmine-node/bin/jasmine-node test"
   },
   "devDependencies": {
     "jasmine-core": "^2.2.0",
+    "jasmine-node": "^1.14.5",
     "karma": "^0.12.31",
     "karma-jasmine": "^0.3.5",
     "karma-nyan-reporter": "0.0.50",
