--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "crypto": "0.0.3",
+    "js-object-pretty-print": "^0.1.3",
     "lodash": "^3.5.0",
     "lodash-contrib": "^241.4.14",
     "pegjs": "^0.8.0",
