--- a/src/package.json
+++ b/src/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "crypto": "0.0.3",
+    "js-beautify": "^1.5.5",
     "js-object-pretty-print": "^0.1.3",
     "lodash": "^3.5.0",
     "lodash-contrib": "^241.4.14",
