--- a/src/package.json
+++ b/src/package.json
@@ -1,14 +1,16 @@
 {
   "name": "data-monster",
+  "version": "0.0.1",
   "scripts": {
-    "test": "./node_modules/jasmine-node/bin/jasmine-node specs"
+    "test": "./node_modules/jasmine-node/bin/jasmine-node specs",
+    "chomp": "./node_modules/.bin/chomp"
   },
+  "bin": { "chomp": "./chomp.js" },
   "devDependencies": {
     "jasmine-core": "^2.2.0",
-    "jasmine-node": "^1.14.5"
+    "jasmine-node": "^1.14.5" 
   },
   "dependencies": {
-    "crypto": "0.0.3",
     "js-beautify": "^1.5.5",
     "js-object-pretty-print": "^0.1.3",
     "lodash": "^3.5.0",
