--- a/data-monster/package.json
+++ b/data-monster/package.json
@@ -5,17 +5,21 @@
     "test": "./node_modules/jasmine-node/bin/jasmine-node specs",
     "chomp": "./node_modules/.bin/chomp"
   },
-  "bin": { "chomp": "./chomp.js" },
+  "bin": {
+    "chomp": "./chomp.js"
+  },
   "devDependencies": {
     "jasmine-core": "^2.2.0",
-    "jasmine-node": "^1.14.5" 
+    "jasmine-node": "^1.14.5"
   },
   "dependencies": {
+    "commander": "^2.8.1",
     "js-beautify": "^1.5.5",
     "js-object-pretty-print": "^0.1.3",
     "lodash": "^3.5.0",
     "lodash-contrib": "^241.4.14",
     "pegjs": "^0.8.0",
+    "rsvp": "^3.0.18",
     "uuid-v4": "^0.1.0"
   }
 }
